# alice-web-prototype

./: .gitignore  EATME.md  README.md  amplihack_cli.py  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  test_amplihack_cli.py  tsconfig.json  tsconfig.server.json  vite.config.ts
.github/: docs-requirements.txt
.test-roundtrip/: modified.a3p
docs/: a3p-statement-round-trip.md  alice-evidence-api.md  alice-evidence-artifact-api.md  alice-evidence-workflow-configuration.md  alice-evidence-workflow-usage.md  alice-evidence-workflow.md  alice-howto-parity-audit-reference.md  alice-howto-parity-audit.md  alice-identity-boundary.md  animation.md  api-reference.md  audio-workflow-configuration.md  audio-workflow-usage.md  audio.md  camera-workflow-api.md  camera-workflow-configuration.md  camera-workflow-usage.md  class-behavior-package-api.md  collision-detection.md  creating-using-testing-3d-character-assets.md  do-together-runtime-evidence.md  do-together-workflow.md  gadugi-test-scenarios.md  getting-started.md  grading-pipeline.md  ide-operations.md  image-editor.md  imported-models-and-textures.md  index.md  lookingglass-eatme-validation.md  lookingglass-identity.md  model-resources.md  model-texture-camera-joint-export-workflow.md  open-asset-pipeline.md  open-source-3d-alternatives.md  parity-gaps-76-77.md  parity-gaps-80-82.md  procedure-function-creation.md  project-io-api.md  project-io-configuration.md  (+36 more)
e2e/: alice-evidence-workflow.spec.ts  app-flow.spec.ts  class-behavior-package.spec.ts  do-together-workflow.spec.ts  (+3 more)
(+593 files in other folders)
