[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alice-web-prototype-amplihack"
version = "0.19.0"
description = "uvx-compatible outside-in test runner for alice-web-prototype"
requires-python = ">=3.11"

[project.scripts]
amplihack = "amplihack_cli:main"

[tool.setuptools]
py-modules = ["amplihack_cli"]
